--- a/MyLocations/Base.lproj/Main.storyboard
+++ b/MyLocations/Base.lproj/Main.storyboard
@@ -86,7 +86,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="400" y="-303"/>
+            <point key="canvasLocation" x="690" y="-377"/>
         </scene>
         <!--Tag Location-->
         <scene sceneID="4ba-fW-Lwt">
@@ -295,7 +295,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xvj-nm-kk5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1318" y="-303"/>
+            <point key="canvasLocation" x="1846" y="0.0"/>
         </scene>
         <!--Category Picker View Controller-->
         <scene sceneID="Ob1-2e-uM2">
@@ -307,7 +307,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" id="eb7-3o-FZh">
-                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="92" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="eb7-3o-FZh" id="tYg-9V-2Us">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -328,7 +328,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cm4-vO-DIu" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="UVH-qj-DbJ" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1711" y="-303"/>
+            <point key="canvasLocation" x="2267" y="0.0"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
@@ -366,7 +366,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="q0S-8G-2dR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="786" y="-303"/>
+            <point key="canvasLocation" x="1444" y="0.0"/>
         </scene>
         <!--Locations-->
         <scene sceneID="f8U-UY-G3x">
@@ -377,7 +377,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LocationCell" rowHeight="57" id="s2G-rK-Lbs">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LocationCell" rowHeight="57" id="s2G-rK-Lbs" customClass="LocationCell" customModule="MyLocations" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="92" width="320" height="57"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="s2G-rK-Lbs" id="Ubx-NI-f1l">
@@ -400,6 +400,11 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="addressLabel" destination="SQK-Jr-mzC" id="0WY-n2-oex"/>
+                                    <outlet property="descriptionLabel" destination="vfr-rY-28e" id="zfC-lX-tlS"/>
+                                    <segue destination="PM3-Ks-pGu" kind="modal" identifier="EditLocation" id="yj4-gy-aKS"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -434,4 +439,7 @@
     <resources>
         <image name="first" width="30" height="30"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="yj4-gy-aKS"/>
+    </inferredMetricsTieBreakers>
 </document>
