--- a/MyLocations/Base.lproj/Main.storyboard
+++ b/MyLocations/Base.lproj/Main.storyboard
@@ -307,7 +307,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" id="eb7-3o-FZh">
-                                <rect key="frame" x="0.0" y="92" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="eb7-3o-FZh" id="tYg-9V-2Us">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -343,11 +343,12 @@
                     <connections>
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
                         <segue destination="UZg-3x-2HE" kind="relationship" relationship="viewControllers" id="FCK-5b-igX"/>
+                        <segue destination="Oyh-7I-uMv" kind="relationship" relationship="viewControllers" id="AkL-KH-EVw"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="0.0" y="0.0"/>
+            <point key="canvasLocation" x="-116" y="361"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="omS-35-hyj">
@@ -435,11 +436,56 @@
             </objects>
             <point key="canvasLocation" x="400" y="361"/>
         </scene>
+        <!--Map-->
+        <scene sceneID="aPO-dL-exd">
+            <objects>
+                <viewController id="Oyh-7I-uMv" customClass="MapViewController" customModule="MyLocations" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Avi-pO-Z8E">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" id="6gc-4T-0t8">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <connections>
+                                    <outlet property="delegate" destination="Oyh-7I-uMv" id="ju0-Ey-b6v"/>
+                                </connections>
+                            </mapView>
+                            <navigationBar contentMode="scaleToFill" id="DG5-vb-SGt">
+                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Map" id="p0K-El-gMt">
+                                        <barButtonItem key="leftBarButtonItem" title="Locations" id="pyp-w9-xis">
+                                            <connections>
+                                                <action selector="showLocations" destination="Oyh-7I-uMv" id="7fd-HH-67A"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" title="User" id="fsn-2e-AO5">
+                                            <connections>
+                                                <action selector="showUser" destination="Oyh-7I-uMv" id="8gT-cT-L4t"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Map" id="0nb-Es-ThE"/>
+                    <connections>
+                        <outlet property="mapView" destination="6gc-4T-0t8" id="A6a-EI-HO0"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Nwv-ig-s2R" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="690" y="1097"/>
+        </scene>
     </scenes>
     <resources>
         <image name="first" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="yj4-gy-aKS"/>
+        <segue reference="rwn-il-1ud"/>
     </inferredMetricsTieBreakers>
 </document>
